--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       border-radius: var(--radius);
       padding:48px 40px;
       text-align:center;
-      box-shadow: 0 8px 40px rgba(0,0,0,0.55);
+      box-shadow: 0 8px 40px rgba(86, 135, 241, 0.55););
     }
     .logo{
       width:80px; height:80px;
