--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <style>
     :root{
-      --bg: linear-gradient(180deg, #0f172a 0%, #111827 100%);
+      --bg: linear-gradient(180deg, #4a7ffa 0%, #2768f3 100%);
       --accent: #6A42FF;
       --muted: rgba(255,255,255,0.72);
       --radius: 14px;
