--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <style>
     :root{
-      --bg: linear-gradient(180deg, #4a7ffa 0%, #2768f3 100%);
+      --bg: linear-gradient(180deg, #1454e9 0%, #6692f1 100%);
       --accent: #6A42FF;
       --muted: rgba(255,255,255,0.72);
       --radius: 14px;
@@ -32,7 +32,7 @@
       border-radius: var(--radius);
       padding:48px 40px;
       text-align:center;
-      box-shadow: 0 8px 40px rgba(86, 135, 241, 0.55););
+      box-shadow: 0 8px 40px rgba(78, 113, 186, 0.55););
     }
     .logo{
       width:80px; height:80px;
@@ -85,7 +85,7 @@
     <p>
       We deeply value your partnership and trust in us.  
       As a distinguished partner, you now have exclusive access to your personalized dashboard.  
-      Inside, you’ll find everything prepared for you — designed to support your growth and success.
+      Inside, you’ll find everything prepared for you and designed to support your growth and success.
     </p>
 
     <a class="btn" href="https://pnlvendor.tolaab.com/">
